# steam_friends_app

./: .env  .env.dev  .gitignore  README.md  docker-compose.kafka.yml  docker-compose.yml  main.py  steam_service.py
api/: Dockerfile  Dockerfile.prod  README.md  celerybeat-schedule  db.sqlite3  entrypoint.sh  main.py  pyproject.toml
api/core/: config.py
api/migrations/: env.py
api/migrations/versions/: 373d6468f89e_add_game.py  66c08149ac5c_init.py  a2aafb1b392a_init.py  f0af52847eba_init.py
api/models/: __init__.py  base.py  db_helper.py  user.py
api/src/: main.py
api/src/celery/: tasks.py  worker.py
api/src/core/: config.py
api/src/db/: __init__.py  admin.py  db_helper.py
api/src/migrations/: env.py
api/src/migrations/versions/: f0840f7ddc1f_initial.py
api/src/models/: __init__.py  base_model.py  subscribe_model.py  user_model.py
api/src/repositories/: __init__.py  base.py  subscribes.py  users.py
api/src/routing/: crud.py  dependencies.py  routers.py  steam.py  subscribes.py  users.py
api/src/schemas/: steam_shemas.py  subscribe_shema.py  user_schema.py
api/src/services/: steam_service.py  subscribe_service.py  user_service.py
api/src/utils/: produser.py
api/tests/: conftest.py  test_user_routes.py  test_user_service.py
api/users/: crud.py  dependencies.py  schemas.py  views.py
bot/: Dockerfile  api_client.py  config.py  entrypoint.sh  main.py  message_temlates.py  requirements.txt  steam_service.py
bot/consumers/: notify_consumer.py
bot/handlers/: auth_handler.py  base_handlers.py  friends_handler.py  subs_handler.py
deploy/: .env.test  docker-compose.yml
steam/: entrypoint.sh  main.py  produser.py  requirements.txt  steam_service.py
(+3 files in other folders)
