[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Pockemonchik <19pokemonchik99@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.23"}
aiosqlite = "^0.19.0"
pydantic-settings = "^2.1.0"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"
pytest-asyncio ="^0.23.5"
httpx = "^0.27.0"
[tool.poetry.group.dev.dependencies]
pytest= "^7.4.0"
pytest-asyncio ="^0.23.5"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [".", "src"]
asyncio_mode = "auto"